[project]
name = "tennis-court-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "matplotlib==3.1.2",
    "numpy==1.19.3",
    "opencv-python>=4.5.3.56",
    "scipy==1.3.1",
    "sympy==1.9",
    "tensorboardx==2.6",
    "torch>=2.4.1",
    "tqdm==4.42.1",
]
